--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  {% if name %}
-  <h1>Hello {{name}}</h1>
-  {% else %}
-  <h1>Hello World</h1>
-  {% endif %}
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    {% if name %}
+    <h1>Hello {{name}}</h1>
+    {% else %}
+    <h1>Hello World</h1>
+    {% endif %}
+    {% comment %} <ul>
+      {% for order in orders %}
+      <li>{{order.id}} - {{order.costumer.first_name}}</li>
+      {% endfor %}
+    </ul> {% endcomment %}
+
+    {% comment %} {{result}} {% endcomment %}
+    
+  </body>
 </html>
